--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ def targetJavaVersion = 17
 def javaVersion = JavaVersion.toVersion(targetJavaVersion)
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
+if (JavaVersion.current() < javaVersion) {
+    java.toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+}
 
 tasks.withType(JavaCompile).configureEach {
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
