--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,12 @@ group = 'net.whimxiqal.journey'
 version = '1.1.0'
 
 
-def targetJavaVersion = 17
+def targetJavaVersion = 16
 def javaVersion = JavaVersion.toVersion(targetJavaVersion)
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
 if (JavaVersion.current() < javaVersion) {
-    java.toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
 }
 
 tasks.withType(JavaCompile).configureEach {
