--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'java'
 apply plugin: 'org.cadixdev.licenser'
 
 group = 'net.whimxiqal.journey'
-version = '1.1.0'
+version = '1.2.0'
 
 
 def targetJavaVersion = 16
@@ -50,16 +50,16 @@ repositories {
         name = 'jitpack'
         url = 'https://jitpack.io'
     }
-//    maven {
-//        name = 'sonatype-snapshots'
-//        url = 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
-//    }
+    maven {
+        name = 'sonatype-snapshots'
+        url = 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+    }
 }
 
 dependencies {
     compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
-    compileOnly 'net.whimxiqal.journey:core-api:1.1'
-    compileOnly 'net.whimxiqal.journey:bukkit-api:1.1'
+    compileOnly 'net.whimxiqal.journey:core-api:1.2-SNAPSHOT'
+    compileOnly 'net.whimxiqal.journey:bukkit-api:1.2-SNAPSHOT'
     compileOnly 'com.github.AlessioGr.NotQuests:common:v5.14.0'
     compileOnly 'com.github.AlessioGr.NotQuests:paper:v5.14.0:dev-all'
 }
